--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smtliblib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An SMTLIBv2 parser and AST",
   "main": "dist/src/smt.js",
   "directories": {
@@ -40,6 +40,6 @@
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3"
+    "eslint": "^7.26.0"
   }
 }
