--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smtliblib",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "An SMTLIBv2 parser and AST",
   "main": "dist/src/smt.js",
   "directories": {
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/dbarowy/smtliblib#readme",
   "dependencies": {
-    "parsecco": "^1.4.6",
+    "parsecco": "^1.5.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
@@ -38,8 +38,9 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.1",
     "chai": "^4.3.4",
+    "eslint": "^7.26.0",
     "mocha": "^8.3.2",
-    "ts-node": "^9.1.1",
-    "eslint": "^7.26.0"
+    "mocha-generators": "^2.0.0",
+    "ts-node": "^9.1.1"
   }
 }
